Fix z-index of navbar

--- a/src/components/dashboard/components/navbar/navbar.css
+++ b/src/components/dashboard/components/navbar/navbar.css
@@ -6,7 +6,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: 9999;
+    z-index: 999;
 }
 
 .navbar-wrapper {
